# autograde

./: AGENTS.md  README.md  pyproject.toml  specs.md
autograde/: __init__.py  checks.py  cli.py
tests/: conftest.py  test_checks.py  test_cli.py
