[project]
name = "autograde"
version = "0.1.0"
description = "CLI tool that inspects a Git repository and checks required conditions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autograde = "autograde.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
